[package]
name = "ttk-sys"
version = "0.1.0"
authors = ["Rikuo Uchiki <dbkn_rikuo@keio.jp>"]
edition = "2018"
links = "ttk"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2.51"

[build-dependencies]
cc = "1.0.35"
bindgen = "0.52"
libc = "0.2.51"
cmake = { git = "https://github.com/dabokun/cmake-rs", branch = "modified-for-ttk-integration"}
